--- a/css/src/carsales.less
+++ b/css/src/carsales.less
@@ -112,6 +112,6 @@
 		height: 61px;
 		background-size: 157px 61px;
 		display:block;
-		background:url("../../images/cs-logo.svg") no-repeat;
+		background:url("/images/cs-logo.svg") no-repeat;
 	}
 }
