--- a/css/src/carsales.less
+++ b/css/src/carsales.less
@@ -10,14 +10,39 @@
   src: url("../../lib/font/league_gothic-webfont.eot");
   src: url("../../lib/font/league_gothic-webfont.eot?#iefix") format("embedded-opentype"), url("../../lib/font/league_gothic-webfont.woff") format("woff"), url("../../lib/font/league_gothic-webfont.ttf") format("truetype"), url("../../lib/font/league_gothic-webfont.svg#LeagueGothicRegular") format("svg");
   font-weight: normal;
-  font-style: normal; }
+  font-style: normal; 
+}
+
+	.js-logo {
+		display:none;
+		width:100px;
+		position: absolute;
+		right:0;
+		top:0;
+	}
+
+.show-logo {
+	.js-logo {
+		display:block;
+	}
+}
 
 .reveal {
   font-family: "Lato", sans-serif;
   font-size: 36px;
   font-weight: normal;
   letter-spacing: -0.02em;
-  color: #657b83; }
+  color: #657b83; 
+}
+
+a {
+	text-decoration:none;
+	color: #090;
+
+	&:hover {
+		text-decoration: underline;
+	}
+}
 
 ::selection {
   color: white;
