--- a/css/src/carsales.less
+++ b/css/src/carsales.less
@@ -33,6 +33,19 @@
   font-weight: normal;
   letter-spacing: -0.02em;
   color: #657b83; 
+
+  iframe.twitter-tweet-rendered {
+    margin-left:25% !important;
+  }
+
+  blockquote {
+  	p {
+  	  font-size: 1.5em;
+  	}
+	cite {
+		margin-top: 0.5em;
+	}
+  }
 }
 
 a {
@@ -107,7 +120,7 @@ a {
 	bottom:0;
 	left:0;
 	width:100%;
-	height:61px;
+	height:73px;
 
 	h2 {
 		color:black;
@@ -132,11 +145,9 @@ a {
 
 	.logo {
 		float:left;
-		text-indent:-10000px;
 		width: 157px;
 		height: 61px;
-		background-size: 157px 61px;
+		margin-left:12px;
 		display:block;
-		background:url("/images/cs-logo.svg") no-repeat;
 	}
 }
