Some more refinements to presentation

--- a/css/src/carsales.less
+++ b/css/src/carsales.less
@@ -41,9 +41,11 @@
   blockquote {
   	p {
   	  font-size: 1.5em;
+  	  color: #FFF;
   	}
 	cite {
 		margin-top: 0.5em;
+		color: #C0E0C0;
 	}
   }
 }
