--- a/css/carsales-theme.css
+++ b/css/carsales-theme.css
@@ -32,9 +32,11 @@
 }
 .reveal blockquote p {
   font-size: 1.5em;
+  color: #FFF;
 }
 .reveal blockquote cite {
   margin-top: 0.5em;
+  color: #C0E0C0;
 }
 a {
   text-decoration: none;
