Some small improvements to styling

--- a/css/carsales-theme.css
+++ b/css/carsales-theme.css
@@ -86,7 +86,7 @@ a:hover {
 .javascript-is-cool h2 {
   color: black;
   position: absolute;
-  text-align: center;
+  text-align: left;
   bottom: 0;
   left: 0;
 }
